[package]
name = "orbslam_gpu_video_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
wgpu = "0.19.3"
orbslam_gpu = { path = "../orbslam_gpu" }
tiny_wgpu = { path = "../tiny_wgpu" }
nokhwa = { path="./nokhwa", features=["input-native"]  }
winit = "0.29.15"
pollster = "0.3.0"
bytemuck = "1.15.0"
zune-jpeg = "0.4.11"

[profile.dev.package.zune-jpeg]
opt-level = 3