[package]
name = "tinyslam_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
wgpu = "0.19.3"
tinyslam = { path = "../tinyslam" }
tiny_wgpu = { path = "../tiny_wgpu" }
nokhwa = { path="./nokhwa", features=["input-native"]  }
winit = "0.29.15"
pollster = "0.3.0"
bytemuck = "1.15.0"